compiler/testData/asJava/lightClasses/compilationErrors/ActualTypeAlias.kt
// p.ActualTypeAliasKt
// IGNORE_BACKEND: ANY
package p

actual typealias B = List<Int>